CB-23717 Fix for testSDXMultiAzUpgrade because the production catalog contains wrong catalog entries