@@ -8,6 +8,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -73,10 +74,13 @@ public class SdxMultiAzUpgradeTest extends PreconditionSdxE2ETest {
         testContext
                 .given(ImageCatalogTestDto.class)
                 .when(imageCatalogTestClient.getV4(true))
+                // We need this logic until 7.2.18 is not in production catalog
                 .then((testContext1, entity, cloudbreakClient) -> {
                     List<ImageV4Response> sortedImages = entity.getResponse().getImages().getCdhImages().stream()
-                            .filter(im -> im.getVersion().equals("7.2.17") && im.getImageSetsByProvider().containsKey("azure"))
-                            .sorted(Comparator.comparing(ImageV4Response::getCreated)).toList();
+                            .filter(im -> im.getVersion().equals(commonClusterManagerProperties.getMinimumRuntimeVersionForEdl()))
+                            .filter(im -> im.getImageSetsByProvider().containsKey(testContext.getCloudPlatform().name().toLowerCase(Locale.ROOT)))
+                            .sorted(Comparator.comparing(ImageV4Response::getCreated))
+                            .collect(Collectors.toList());
                     cdhImages.addAll(sortedImages);
                     return entity;
                 })
@@ -90,7 +94,10 @@ public class SdxMultiAzUpgradeTest extends PreconditionSdxE2ETest {
                     .given(sdx, SdxTestDto.class)
                     .withCloudStorage()
                     .withClusterShape(SdxClusterShape.ENTERPRISE)
-                    .withImageId(cdhImages.get(0).getUuid())
+                    // Because of an emergency fix a newer 7.2.17 was burnet then the latest one.
+                    // We need to remove this once we have a new image in production
+                    // The failed testcase used 5ff64ba3-4e76-4b85-8a89-86a5df9c8445 (emergency release) -> 17475332-e6fb-4bbf-9ad3-598c821ed963
+                    .withImageId("93b37158-275f-45a9-8dd9-b9d089c7bb4e")
                     .withRuntimeVersion(null)
                     .withEnableMultiAz(true)
                     .when(sdxTestClient.createWithImageId(), key(sdx))
@@ -102,7 +109,8 @@ public class SdxMultiAzUpgradeTest extends PreconditionSdxE2ETest {
                         expectedVolumeIds.addAll(getCloudFunctionality(tc).listInstanceVolumeIds(testDto.getName(), instances));
                         return testDto;
                     })
-                    .when(sdxTestClient.osUpgrade(cdhImages.get(cdhImages.size() - 1).getUuid()), key(sdx))
+                    .withUpgradeRequestByImageId(cdhImages.get(cdhImages.size() - 1).getUuid())
+                    .when(sdxTestClient.upgrade(), key(sdx))
                     .await(SdxClusterStatusResponse.RUNNING, key(sdx))
                     .awaitForHealthyInstances()
                     .then((tc, testDto, client) -> {
